# newsletters

./: .gitignore  README.md  docker-compose.yml  run_dev.bat  run_dev.ps1
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 808ceea313d0_initial_migration.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  content_item.py  email_event.py  newsletter.py  subscriber.py  user.py
backend/app/routers/: auth.py  content.py  newsletters.py  subscribers.py  webhooks.py
backend/app/schemas/: auth.py  content_item.py  newsletter.py  subscriber.py
backend/app/services/: auth.py  email_sender.py  generation.py  subscription.py  template_engine.py
backend/app/services/ingestion/: gmail.py  rss.py
backend/app/templates/: confirm_email.html  newsletter_master.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admin/content/: page.tsx
frontend/src/app/admin/login/: page.tsx
frontend/src/app/admin/newsletters/: page.tsx
frontend/src/app/admin/newsletters/[id]/: page.tsx
frontend/src/app/admin/subscribers/: page.tsx
frontend/src/app/confirm/: page.tsx
frontend/src/app/unsubscribe/: page.tsx
frontend/src/lib/: api.ts
