[project]
name = "newsletter-backend"
version = "1.0.0"
description = "AI-Powered Newsletter System - Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.35",
    "psycopg[binary]>=3.1.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "sib-api-v3-sdk>=7.6.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
